--- a/src/components/Inin.css
+++ b/src/components/Inin.css
@@ -1,1 +1,1 @@
-main{background-color: yellow; text-align: center; width: 100%; margin-top:0px }
+.seila{background-color: yellow; text-align: center;}
