--- a/src/components/noticiav.css
+++ b/src/components/noticiav.css
@@ -1,2 +1,2 @@
-.titulon{text-align:center}
-.texton{text-aling:center; margin-top:5%}
+.autor{color:rgb(26, 23, 20)}
+.card-body{background-color:dimgrey; width:35%;margin-top:2%; margin-left:10%;text-align: center; height: 140px;float: left;}
