--- a/src/components/qnoticia.css
+++ b/src/components/qnoticia.css
@@ -1,1 +1,4 @@
-.card-body{background-color:gray; width:35%;margin-top:2%; margin-left:10%;text-align: center; height: 140px;float: left;}
+.titulonoticia{text-align:center}
+.desc{text-align: center}
+.conteudo{text-align: center; margin-left:15%; margin-right:15%}
+.rodape{margin-top:5%}
